# TerminalSudoku

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  a.out  auto.sh  calculations.ipynb  formatSrc.sh  format_src.sh  install.sh  installer.sh  jannyScript.sh  notebook.ipynb  readme.md  test.cpp
.cmake/api/v1/reply/: cache-v2-f8217655ac60a30eaae0.json  codemodel-v2-1707bf363628fa5a3535.json  codemodel-v2-3f14e89c361d550ab9f1.json  index-2021-10-16T21-02-17-0463.json  index-2021-10-19T18-14-00-0059.json  target-TerminalSuDoKu-Debug-4f798513e4264447e1c2.json  target-TerminalSuDoKu-Debug-5236f4ae8d7df2164075.json  toolchains-v1-8d896842981ecbd4389a.json
boards/: 16102021211300.txt  16102021224726.txt  19102021215714.txt  example.txt  level1.txt  level2.txt  level3.txt
media/: logo.txt
src/: board.cpp  board.h  game.cpp  game.h  logo.txt  main.cpp  sudoku.cpp  sudoku.h  test.cpp
